fix(homepage): project module text alignment
The titles of the external projects on the homepage
were centered when they should have been
aligned to the left of their container. Fixed in
this commit.

--- a/src/components/ProjectModule.module.scss
+++ b/src/components/ProjectModule.module.scss
@@ -132,6 +132,10 @@ a.project-module-footer-link:hover {
     margin: 0;
   }
 
+  .project-module-copy {
+    align-items: flex-start;
+  }
+
   .project-module-title {
     margin: 0 0 4px 0;
     text-align: left;
